--- a/sass/sprite.scss
+++ b/sass/sprite.scss
@@ -1,10 +1,10 @@
 %svg-common {
-	background: url("svg/sprite.css-2638acc6.svg") no-repeat;
+	background: url("svg/sprite.css-33e82f05.svg") no-repeat;
 }
 
 .svg-arrow-down {
 	@extend %svg-common;
-	background-position: 37.80918727915194% 94.28571428571429%;
+	background-position: 37.80918727915194% 86.19402985074628%;
 }
 
 .svg-arrow-down-dims {
@@ -14,7 +14,7 @@
 
 .svg-arrow-left {
 	@extend %svg-common;
-	background-position: 19.12350597609562% 22.535211267605632%;
+	background-position: 19.12350597609562% 20.338983050847457%;
 }
 
 .svg-arrow-left-dims {
@@ -24,7 +24,7 @@
 
 .svg-arrow-left-hover {
 	@extend %svg-common;
-	background-position: 0 22.535211267605632%;
+	background-position: 0 0;
 }
 
 .svg-arrow-left-hover-dims {
@@ -34,7 +34,7 @@
 
 .svg-arrow-right {
 	@extend %svg-common;
-	background-position: 0 0;
+	background-position: 19.12350597609562% 0;
 }
 
 .svg-arrow-right-dims {
@@ -44,7 +44,7 @@
 
 .svg-arrow-right-hover {
 	@extend %svg-common;
-	background-position: 19.12350597609562% 0;
+	background-position: 0 20.338983050847457%;
 }
 
 .svg-arrow-right-hover-dims {
@@ -54,7 +54,7 @@
 
 .svg-arrow-up {
 	@extend %svg-common;
-	background-position: 97.17314487632508% 97.14285714285714%;
+	background-position: 97.17314487632508% 89.17910447761194%;
 }
 
 .svg-arrow-up-dims {
@@ -64,7 +64,7 @@
 
 .svg-burger {
 	@extend %svg-common;
-	background-position: 29.927007299270073% 94.28571428571429%;
+	background-position: 29.927007299270073% 86.19402985074628%;
 }
 
 .svg-burger-dims {
@@ -74,7 +74,7 @@
 
 .svg-chevron {
 	@extend %svg-common;
-	background-position: 100% 70.88607594936708%;
+	background-position: 100% 73.84615384615384%;
 }
 
 .svg-chevron-dims {
@@ -84,7 +84,7 @@
 
 .svg-chevron-green {
 	@extend %svg-common;
-	background-position: 100% 0;
+	background-position: 100% 46.15384615384615%;
 }
 
 .svg-chevron-green-dims {
@@ -94,7 +94,7 @@
 
 .svg-close {
 	@extend %svg-common;
-	background-position: 75.09293680297398% 82.25108225108225%;
+	background-position: 0 90.94488188976378%;
 }
 
 .svg-close-dims {
@@ -104,7 +104,7 @@
 
 .svg-close-black {
 	@extend %svg-common;
-	background-position: 0 100%;
+	background-position: 75.09293680297398% 74.80314960629921%;
 }
 
 .svg-close-black-dims {
@@ -114,7 +114,7 @@
 
 .svg-close-blue {
 	@extend %svg-common;
-	background-position: 88.10408921933086% 82.25108225108225%;
+	background-position: 88.10408921933086% 74.80314960629921%;
 }
 
 .svg-close-blue-dims {
@@ -124,7 +124,7 @@
 
 .svg-ellipse {
 	@extend %svg-common;
-	background-position: 99.31740614334471% 93.33333333333333%;
+	background-position: 99.31740614334471% 85.97122302158273%;
 }
 
 .svg-ellipse-dims {
@@ -134,7 +134,7 @@
 
 .svg-ellipse-empty {
 	@extend %svg-common;
-	background-position: 100% 10.126582278481013%;
+	background-position: 100% 18.46153846153846%;
 }
 
 .svg-ellipse-empty-dims {
@@ -144,7 +144,7 @@
 
 .svg-ellipse-selected {
 	@extend %svg-common;
-	background-position: 100% 50.63291139240506%;
+	background-position: 100% 64.61538461538461%;
 }
 
 .svg-ellipse-selected-dims {
@@ -154,7 +154,7 @@
 
 .svg-facebook {
 	@extend %svg-common;
-	background-position: 37.301587301587304% 66.82242990654206%;
+	background-position: 55.95238095238095% 60.33755274261603%;
 }
 
 .svg-facebook-dims {
@@ -164,7 +164,7 @@
 
 .svg-facebook-green-fill {
 	@extend %svg-common;
-	background-position: 55.95238095238095% 66.82242990654206%;
+	background-position: 75.39682539682539% 0;
 }
 
 .svg-facebook-green-fill-dims {
@@ -174,7 +174,7 @@
 
 .svg-facebook-green-outline {
 	@extend %svg-common;
-	background-position: 75.39682539682539% 0;
+	background-position: 75.39682539682539% 19.831223628691983%;
 }
 
 .svg-facebook-green-outline-dims {
@@ -184,7 +184,7 @@
 
 .svg-facebook-white {
 	@extend %svg-common;
-	background-position: 75.39682539682539% 21.962616822429908%;
+	background-position: 75.39682539682539% 39.66244725738397%;
 }
 
 .svg-facebook-white-dims {
@@ -204,7 +204,7 @@
 
 .svg-insights-article-hover {
 	@extend %svg-common;
-	background-position: 90.80459770114942% 17.04035874439462%;
+	background-position: 90.80459770114942% 61.78861788617886%;
 }
 
 .svg-insights-article-hover-dims {
@@ -214,7 +214,7 @@
 
 .svg-insights-audio {
 	@extend %svg-common;
-	background-position: 90.80459770114942% 34.08071748878924%;
+	background-position: 62.83524904214559% 77.23577235772358%;
 }
 
 .svg-insights-audio-dims {
@@ -224,7 +224,7 @@
 
 .svg-insights-audio-hover {
 	@extend %svg-common;
-	background-position: 90.80459770114942% 51.12107623318386%;
+	background-position: 90.80459770114942% 46.34146341463415%;
 }
 
 .svg-insights-audio-hover-dims {
@@ -234,7 +234,7 @@
 
 .svg-insights-video {
 	@extend %svg-common;
-	background-position: 90.80459770114942% 68.16143497757848%;
+	background-position: 90.80459770114942% 15.447154471544716%;
 }
 
 .svg-insights-video-dims {
@@ -244,7 +244,7 @@
 
 .svg-insights-video-hover {
 	@extend %svg-common;
-	background-position: 62.83524904214559% 85.20179372197309%;
+	background-position: 90.80459770114942% 30.89430894308943%;
 }
 
 .svg-insights-video-hover-dims {
@@ -254,7 +254,7 @@
 
 .svg-linkedin {
 	@extend %svg-common;
-	background-position: 75.39682539682539% 65.88785046728972%;
+	background-position: 38.095238095238095% 0;
 }
 
 .svg-linkedin-dims {
@@ -264,7 +264,7 @@
 
 .svg-linkedin-green-fill {
 	@extend %svg-common;
-	background-position: 18.650793650793652% 66.82242990654206%;
+	background-position: 37.301587301587304% 60.33755274261603%;
 }
 
 .svg-linkedin-green-fill-dims {
@@ -274,7 +274,7 @@
 
 .svg-linkedin-green-outline {
 	@extend %svg-common;
-	background-position: 37.301587301587304% 44.85981308411215%;
+	background-position: 18.650793650793652% 60.33755274261603%;
 }
 
 .svg-linkedin-green-outline-dims {
@@ -284,7 +284,7 @@
 
 .svg-linkedin-white {
 	@extend %svg-common;
-	background-position: 18.650793650793652% 44.85981308411215%;
+	background-position: 0 60.33755274261603%;
 }
 
 .svg-linkedin-white-dims {
@@ -292,9 +292,19 @@
 	height: 47px;
 }
 
+.svg-map-icon {
+	@extend %svg-common;
+	background-position: 100% 36.92307692307692%;
+}
+
+.svg-map-icon-dims {
+	width: 24px;
+	height: 24px;
+}
+
 .svg-search {
 	@extend %svg-common;
-	background-position: 20.512820512820515% 98.29787234042553%;
+	background-position: 20.512820512820515% 89.53488372093024%;
 }
 
 .svg-search-dims {
@@ -304,7 +314,7 @@
 
 .svg-search-blue {
 	@extend %svg-common;
-	background-position: 10.989010989010989% 98.29787234042553%;
+	background-position: 10.989010989010989% 89.53488372093024%;
 }
 
 .svg-search-blue-dims {
@@ -314,7 +324,7 @@
 
 .svg-search-icon {
 	@extend %svg-common;
-	background-position: 47.674418604651166% 86.36363636363636%;
+	background-position: 0 78.18930041152264%;
 }
 
 .svg-search-icon-dims {
@@ -324,7 +334,7 @@
 
 .svg-search-icon-hover {
 	@extend %svg-common;
-	background-position: 0 86.36363636363636%;
+	background-position: 47.674418604651166% 78.18930041152264%;
 }
 
 .svg-search-icon-hover-dims {
@@ -334,7 +344,7 @@
 
 .svg-search-type-all {
 	@extend %svg-common;
-	background-position: 100% 40.50632911392405%;
+	background-position: 100% 55.38461538461539%;
 }
 
 .svg-search-type-all-dims {
@@ -344,7 +354,7 @@
 
 .svg-search-type-insights {
 	@extend %svg-common;
-	background-position: 100% 30.379746835443036%;
+	background-position: 100% 27.692307692307693%;
 }
 
 .svg-search-type-insights-dims {
@@ -354,7 +364,7 @@
 
 .svg-search-type-people {
 	@extend %svg-common;
-	background-position: 100% 20.253164556962027%;
+	background-position: 100% 0;
 }
 
 .svg-search-type-people-dims {
@@ -364,7 +374,7 @@
 
 .svg-search-type-strategies {
 	@extend %svg-common;
-	background-position: 100% 60.75949367088607%;
+	background-position: 100% 9.23076923076923%;
 }
 
 .svg-search-type-strategies-dims {
@@ -374,7 +384,7 @@
 
 .svg-twitter {
 	@extend %svg-common;
-	background-position: 38.095238095238095% 0;
+	background-position: 56.74603174603175% 39.66244725738397%;
 }
 
 .svg-twitter-dims {
@@ -384,7 +394,7 @@
 
 .svg-twitter-green-fill {
 	@extend %svg-common;
-	background-position: 56.74603174603175% 43.925233644859816%;
+	background-position: 56.74603174603175% 19.831223628691983%;
 }
 
 .svg-twitter-green-fill-dims {
@@ -394,7 +404,7 @@
 
 .svg-twitter-green-outline {
 	@extend %svg-common;
-	background-position: 56.74603174603175% 21.962616822429908%;
+	background-position: 56.74603174603175% 0;
 }
 
 .svg-twitter-green-outline-dims {
@@ -404,7 +414,7 @@
 
 .svg-twitter-white {
 	@extend %svg-common;
-	background-position: 56.74603174603175% 0;
+	background-position: 37.301587301587304% 40.50632911392405%;
 }
 
 .svg-twitter-white-dims {
@@ -414,7 +424,7 @@
 
 .svg-user {
 	@extend %svg-common;
-	background-position: 15.891472868217054% 86.36363636363636%;
+	background-position: 31.782945736434108% 78.18930041152264%;
 }
 
 .svg-user-dims {
@@ -424,7 +434,7 @@
 
 .svg-user-hover {
 	@extend %svg-common;
-	background-position: 31.782945736434108% 86.36363636363636%;
+	background-position: 15.891472868217054% 78.18930041152264%;
 }
 
 .svg-user-hover-dims {
@@ -434,7 +444,7 @@
 
 .svg-view-all-blue {
 	@extend %svg-common;
-	background-position: 99.6376811594203% 90.33613445378151%;
+	background-position: 0 100%;
 }
 
 .svg-view-all-blue-dims {
@@ -444,7 +454,7 @@
 
 .svg-view-all-green {
 	@extend %svg-common;
-	background-position: 99.6376811594203% 80.67226890756302%;
+	background-position: 99.6376811594203% 82.75862068965517%;
 }
 
 .svg-view-all-green-dims {
@@ -454,7 +464,7 @@
 
 .svg-youtube {
 	@extend %svg-common;
-	background-position: 0 44.85981308411215%;
+	background-position: 18.650793650793652% 40.50632911392405%;
 }
 
 .svg-youtube-dims {
@@ -464,7 +474,7 @@
 
 .svg-youtube-green-fill {
 	@extend %svg-common;
-	background-position: 38.095238095238095% 21.962616822429908%;
+	background-position: 0 40.50632911392405%;
 }
 
 .svg-youtube-green-fill-dims {
@@ -474,7 +484,7 @@
 
 .svg-youtube-green-outline {
 	@extend %svg-common;
-	background-position: 75.39682539682539% 43.925233644859816%;
+	background-position: 38.095238095238095% 19.831223628691983%;
 }
 
 .svg-youtube-green-outline-dims {
@@ -484,7 +494,7 @@
 
 .svg-youtube-white {
 	@extend %svg-common;
-	background-position: 0 66.82242990654206%;
+	background-position: 75.39682539682539% 59.49367088607595%;
 }
 
 .svg-youtube-white-dims {
