--- a/css/style.css
+++ b/css/style.css
@@ -3191,6 +3191,19 @@ a.btn.primary:hover:before {
   margin: 75px auto 0;
 }
 
+@media screen and (max-width: 600px) {
+  .chart-wrapper .chart-content {
+    padding: 55px 15px;
+  }
+  .chart-wrapper .chart-content h2 {
+    margin-bottom: 35px;
+    font-size: 22px;
+    line-height: 31px;
+  }
+  .chart-wrapper .chart-content canvas {
+    margin: 0 auto;
+  }
+}
 .fullimage-block {
   background: #0C2F4B;
   padding: 70px 15px;
