--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1408,6 +1408,18 @@ a.btn.primary {
 		padding: 100px 0;
 	}
 
+	h5 {
+		cursor: pointer;
+
+		color: #000;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 14.5px;
+		line-height: 17px;
+		letter-spacing: 0.2em;
+		text-transform: uppercase;
+	}
+
 	.tabs {
 		display: flex;
 		padding: 0 45px 20px;
@@ -1443,22 +1455,27 @@ a.btn.primary {
 				z-index: 1;
 			}
 		}
-
-		h5 {
-			cursor: pointer;
-
-			color: #000;
-			font-style: normal;
-			font-weight: bold;
-			font-size: 14.5px;
-			line-height: 17px;
-			letter-spacing: 0.2em;
-			text-transform: uppercase;
-		}
 	}
 
 	.breakdown {
 		padding: 0 45px;
+
+		h5 {
+			display: none;
+			position: relative;
+
+			&:after {
+				@extend .svg-arrow-right-hover;
+				content: '';
+				width: 48px;
+				height: 48px;
+				position: absolute;
+				right: -18px;
+				top: -15px;
+
+				transform: rotate(90deg) scale(.35)
+			}
+		}
 
 		h6 {
 			margin-bottom: 35px;
@@ -1497,6 +1514,12 @@ a.btn.primary {
 		.active {
 			.content {
 				display: flex;
+			}
+
+			h5 {
+				&:after {
+					transform: rotate(-90deg) scale(.35);
+				}
 			}
 		}
 
@@ -1589,20 +1612,51 @@ a.btn.primary {
 			}
 		}
 
-		.mix-chart {
+		.doughnut-chart {
 			max-width: 330px;
 			max-height: 330px;
+
+			&.mobile {
+				display: none;
+			}
 		}
 	}
 }
 
 @media screen and (max-width: 600px) {
 	.portfolio {
+		.portfolio-content {
+			padding: 35px 15px;
+		}
+
 		.tabs {
 			display: none;
 		}
 
 		.breakdown {
+			padding: 0;
+
+			h5 {
+				display: block;
+
+				font-size: 16px;
+				line-height: 19px;
+				letter-spacing: normal;
+			}
+
+			h6 {
+				font-size: 12.5px;
+				line-height: 15px;
+			}
+
+			& > li {
+				border: 1px solid #aaa;
+				border-radius: 3px;
+
+				margin: 5px auto;
+				padding: 15px;
+			}
+
 			ul {
 				max-height: none;
 			}
@@ -1612,8 +1666,21 @@ a.btn.primary {
 					flex-direction: column;
 				}
 			}
-		}
 
+			.doughnut-chart {
+				&.desktop {
+					display: none !important;
+				}
+				
+				&.mobile {
+					display: block;
+					max-width: 200px;
+					max-height: 200px;
+
+					margin: 0 auto 50px;
+				}
+			}
+		}
 	}
 }
 
