--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -941,6 +941,17 @@ a.btn.primary {
 			font-size: 60px;
 			line-height: 59px;
 			text-align: center;
+
+			& > span {
+				display: inline-block;
+				vertical-align: middle;
+			}
+
+			&.year {
+				.odometer-formatting-mark {
+					display: none;
+				}
+			}
 		}
 
 		.description {
@@ -1805,6 +1816,105 @@ a.btn.primary {
 	}
 }
 
+.odometer.odometer-auto-theme, 
+.odometer.odometer-theme-minimal {
+	display: inline-block;
+	vertical-align: middle;
+	*vertical-align: auto;
+	*zoom: 1;
+	*display: inline;
+	position: relative;
+
+	.odometer-digit {
+		display: inline-block;
+		vertical-align: middle;
+		*vertical-align: auto;
+		*zoom: 1;
+		*display: inline;
+		position: relative;
+
+		.odometer-digit-spacer {
+			display: inline-block;
+			vertical-align: middle;
+			*vertical-align: auto;
+			*zoom: 1;
+			*display: inline;
+			visibility: hidden;
+		}
+
+		.odometer-digit-inner {
+			text-align: left;
+			display: block;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			overflow: hidden;
+		}
+
+		.odometer-ribbon {
+			display: block;
+		}
+		.odometer-ribbon-inner {
+			display: block;
+			-webkit-backface-visibility: hidden;
+		}
+		.odometer-value {
+			display: block;
+			-webkit-transform: translateZ(0);
+
+			&.odometer-last-value {
+				position: absolute;
+			}
+		}
+	}
+
+	&.odometer-animating-up .odometer-ribbon-inner {
+		-webkit-transition: -webkit-transform 2s;
+		-moz-transition: -moz-transform 2s;
+		-ms-transition: -ms-transform 2s;
+		-o-transition: -o-transform 2s;
+		transition: transform 2s;
+	}
+
+	&.odometer-animating .odometer-ribbon-inner {
+		-webkit-transform: translateY(-100%);
+		-moz-transform: translateY(-100%);
+		-ms-transform: translateY(-100%);
+		-o-transform: translateY(-100%);
+		transform: translateY(-100%);
+	}
+
+	&.odometer-animating-down .odometer-ribbon-inner {
+		-webkit-transform: translateY(-100%);
+		-moz-transform: translateY(-100%);
+		-ms-transform: translateY(-100%);
+		-o-transform: translateY(-100%);
+		transform: translateY(-100%);
+	}
+
+	&.odometer-animating-down.odometer-animating .odometer-ribbon-inner {
+		-webkit-transition: -webkit-transform 2s;
+		-moz-transition: -moz-transform 2s;
+		-ms-transition: -ms-transform 2s;
+		-o-transition: -o-transform 2s;
+		transition: transform 2s;
+		-webkit-transform: translateY(0);
+		-moz-transform: translateY(0);
+		-ms-transform: translateY(0);
+		-o-transform: translateY(0);
+		transform: translateY(0);
+	}
+
+	.odometer-formatting-mark {
+		vertical-align: bottom;
+	}
+
+	.odometer-value {
+		text-align: center;
+	}
+}
 
 @media screen and (max-width: 600px) {
 	.references {
