--- a/css/style.css
+++ b/css/style.css
@@ -3307,21 +3307,43 @@ a.btn.primary:hover:before {
 }
 .sliding-info {
   background: #fff;
-  padding: 198px 15px;
+  padding: 108px 15px 198px;
 }
 .sliding-info .sliding-info-content {
   max-width: 1210px;
   margin: 0 auto;
   display: flex;
+  position: relative;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
+}
+.sliding-info .sliding-info-content.fixed h2 {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
 }
 .sliding-info h2 {
+  position: absolute;
+  top: 50vh;
+  left: 0;
+  transform: translateY(-50%);
   color: #000;
   font-style: normal;
   font-weight: bold;
   font-size: 58px;
-  line-height: 81px;
+  line-height: 1em;
+}
+.sliding-info .trigger-1 {
+  position: absolute;
+  top: 50vh;
+  height: 1px;
+  background: #f00;
+}
+.sliding-info .trigger-2 {
+  position: absolute;
+  bottom: 50vh;
+  height: 1px;
+  background: #f00;
 }
 .sliding-info img {
   max-width: 615px;
@@ -3331,8 +3353,13 @@ a.btn.primary:hover:before {
   max-width: 842px;
   width: 100%;
 }
-.sliding-info .slides li {
+.sliding-info .slides .item {
+  margin-top: 90px;
   position: relative;
+  opacity: 0;
+}
+.sliding-info .slides .item.visible {
+  opacity: 1;
 }
 .sliding-info .img-wrap {
   display: inline-block;
@@ -3384,15 +3411,37 @@ a.btn.primary:hover:before {
 
 @media screen and (max-width: 600px) {
   .sliding-info {
-    padding: 100px 15px;
+    padding: 100px 15px 55px;
   }
   .sliding-info .sliding-info-content {
     flex-direction: column;
   }
   .sliding-info .sliding-info-content h2 {
     margin-bottom: 40px;
+    position: static;
     font-size: 22px;
     line-height: 31px;
+  }
+  .sliding-info .sliding-info-content .slides .item {
+    opacity: 1;
+    margin-top: 0;
+  }
+  .sliding-info .sliding-info-content .owl-dots {
+    margin-top: 55px;
+    text-align: center;
+  }
+  .sliding-info .sliding-info-content .owl-dot {
+    background: #000;
+    border: 0 none;
+    border-radius: 100%;
+    width: 10px;
+    height: 10px;
+    margin: 0 7.5px;
+    opacity: 0.4;
+  }
+  .sliding-info .sliding-info-content .owl-dot.active {
+    background: #388067;
+    opacity: 1;
   }
   .sliding-info .sliding-info-content .img-wrap:after {
     display: none;
