--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1297,22 +1297,50 @@ a.btn.primary {
 
 .sliding-info {
 	background: #fff;
-	padding: 198px 15px;
+	padding: 108px 15px 198px;
 
 	.sliding-info-content {
 		max-width: 1210px;
 		margin: 0 auto;
 		display: flex;
+		position: relative;
 		align-items: center;
-		justify-content: space-between;
+		justify-content: flex-end;
+
+		&.fixed {
+			h2 {
+				position: fixed;
+				top: 50%;
+				transform: translateY(-50%);
+			}
+		}
 	}
 
 	h2 {
+		position: absolute;
+		top: 50vh;
+		left: 0;
+
+		transform: translateY(-50%);
 		color: #000;
 		font-style: normal;
 		font-weight: bold;
 		font-size: 58px;
-		line-height: 81px;
+		line-height: 1em;
+	}
+
+	.trigger-1 {
+		position: absolute;
+		top: 50vh;
+		height: 1px;
+		background: #f00;
+	}
+
+	.trigger-2 {
+		position: absolute;
+		bottom: 50vh;
+		height: 1px;
+		background: #f00;
 	}
 
 	img {
@@ -1324,9 +1352,15 @@ a.btn.primary {
 		max-width: 842px;
 		width: 100%;
 
-		li {
+		.item {
+			margin-top: 90px;
 			position: relative;
+			opacity: 0;
+			// height: 100vh;
 
+			&.visible {
+				opacity: 1;
+			}
 		}
 	}
 
@@ -1390,16 +1424,46 @@ a.btn.primary {
 
 @media screen and (max-width: 600px) {
 	.sliding-info {
-		padding: 100px 15px; 
+		padding: 100px 15px 55px;
 
 		.sliding-info-content {
 			flex-direction: column;
 
 			h2 {
 				margin-bottom: 40px;
+				position: static;
 
 				font-size: 22px;
 				line-height: 31px;
+			}
+
+			.slides {
+				.item {
+					opacity: 1;
+					margin-top: 0;
+				}
+			}
+
+			.owl-dots {
+				margin-top: 55px;
+
+				text-align: center;
+			}
+
+			.owl-dot {
+				background: #000;
+				border: 0 none;
+				border-radius: 100%;
+
+				width: 10px;
+				height: 10px;
+				margin: 0 7.5px;
+				opacity: 0.4;
+
+				&.active {
+					background: #388067;
+					opacity: 1;
+				}
 			}
 
 			.img-wrap {
